--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "expo": "~53.0.16",
     "expo-av": "~15.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
+    "expo-location": "~18.1.6",
+    "expo-navigation-bar": "~4.2.7",
     "expo-router": "^5.1.2",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
+    "lucide-react-native": "^0.542.0",
     "moti": "^0.30.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-maps": "1.20.1",
     "react-native-svg": "15.11.2",
-    "react-native-web": "^0.20.0",
-    "expo-navigation-bar": "~4.2.7"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
